--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
-
 
     <groupId>be.vdab</groupId>
     <artifactId>jpa-books</artifactId>
